Create objects for compaction files switch case